--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@ li {
     cursor: pointer;
     min-width: calc(100% / 4);
     position: relative;
+    background-color: white;
 }
 
 li:hover {
@@ -24,4 +25,9 @@ li:hover {
     background-color: rgba(218, 55, 90, 0.493);
     border-radius: 15px;
     padding: 5px 10px;
+}
+
+ul {
+    background-color: lightgray;
+    border-radius: 20px;
 }
